--- a/front/src/sass/main.scss
+++ b/front/src/sass/main.scss
@@ -7,8 +7,7 @@
   letter-spacing: 0.03em;
   font-family: "Montserrat", sans-serif;
 }
-$blackColor: #000;
-$whiteColor: #fff;
+
 html {
   width: 100%;
   height: 100%;
@@ -32,6 +31,57 @@ body {
   flex-direction: column;
   flex-grow: 1;
   padding: 40px;
+  $blackColor: #000;
+  $whiteColor: #fff;
+  background-color: $whiteColor;
+
+  &.dark {
+    background-color: $blackColor;
+    .home-page-title {
+      color: $whiteColor;
+    }
+    .home-page-subtitle {
+      color: $whiteColor;
+    }
+    .home-page-buttons {
+      .home-page-button {
+        border: 1px solid $whiteColor;
+        color: $whiteColor;
+
+        background-color: $blackColor;
+
+        &:hover {
+          background-color: $whiteColor;
+          color: $blackColor;
+        }
+        &.selected-option {
+          background-color: $whiteColor;
+          color: $blackColor;
+        }
+      }
+    }
+
+    table {
+      thead {
+        tr {
+          th {
+            border: 1px solid $whiteColor;
+            background-color: $whiteColor;
+            color: $blackColor;
+          }
+        }
+      }
+      tbody {
+        tr {
+          td {
+            color: $whiteColor;
+            border: 1px solid $whiteColor;
+          }
+        }
+      }
+    }
+  }
+
   .home-page-title {
     font-size: 25px;
     line-height: 100%;
@@ -66,6 +116,7 @@ body {
       align-items: center;
       padding: 0.65rem 1.5rem;
       border: 1px solid $blackColor;
+      color: $blackColor;
       border-radius: 4px;
       font-weight: 600;
       font-size: 16px;
@@ -112,6 +163,7 @@ body {
     tbody {
       tr {
         td {
+          color: $blackColor;
           border: 1px solid $blackColor;
           padding: 10px;
           font-weight: 400;
