front-end optimization refactor

--- a/front/src/scss/main.scss
+++ b/front/src/scss/main.scss
@@ -3,4 +3,8 @@
 
 @import "base/defaults.scss";
 @import "base/utilities.scss";
+
+@import "components/tableData";
+@import "components/mapFilters";
+
 @import "pages/homePage";
