--- a/front/src/scss/pages/_homePage.scss
+++ b/front/src/scss/pages/_homePage.scss
@@ -37,6 +37,21 @@
           }
         }
       }
+      &.disabled-option {
+        border: 0.1rem solid $darkGreyColor;
+        color: $darkGreyColor;
+        &::before {
+          background-color: $darkGreyColor;
+        }
+        &:hover {
+          color: $whiteColor;
+          &::before {
+            border: 0.1rem solid $darkGreyColor;
+            transform: scaleX(1);
+            transform-origin: left;
+          }
+        }
+      }
     }
   }
 
