--- a/front/src/scss/components/_tableData.scss
+++ b/front/src/scss/components/_tableData.scss
@@ -29,6 +29,13 @@
       .card-info-title {
         color: $darkGreyColor;
       }
+      .card-info-value {
+        flex: 1;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
       &.full-width {
         width: 100%;
       }
